# earnings-research-agent

./: .env.example  .gitignore  Makefile  README.md  agent.py  financials_agent_xai.py  news_agent_xai.py  push_transcript_to_db.py  pyproject.toml  railway.toml  requirements.txt
backend/: main.py
configs/: edgar_mcp.yaml  gemini.yaml  pinecone.yaml  rag.yaml
docs/: agentic_rag.md  architecture.md  feedback_loop.md  langgraph_graph.md  mcp_setup.md
frontend/: index.html  package-lock.json  package.json
frontend/src/: App.jsx  index.css
scripts/: export_feedback.py  ingest_transcripts.py  run_agent.py
src/earnings_research_agent/agents/: merge_node.py  peer_agent.py  peer_selector.py  refine_node.py  transcript_agent.py
src/earnings_research_agent/feedback/: feedback_store.py  human_review.py  log_feedback.py
src/earnings_research_agent/graph/: checkpointer.py  edges.py  graph.py
src/earnings_research_agent/mcp/: auth.py  edgar_tools.py
src/earnings_research_agent/rag/: grader.py  hallucination_checker.py  query_rewriter.py  retriever.py
src/earnings_research_agent/state/: graph_state.py  schemas.py
src/earnings_research_agent/tools/: auto_ingest.py  edgar_mcp_client.py  pinecone_tool.py  xbrl_segments.py
src/earnings_research_agent/utils/: config.py  exceptions.py  llm.py  logging.py
