[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "earnings-research-agent"
version = "0.1.0"
description = "LangGraph multi-agent equity research terminal with agentic RAG and EdgarTools MCP"
requires-python = ">=3.10"
dependencies = [
    "langgraph>=0.2",
    "langchain-core>=0.3",
    "langchain-google-genai>=4.0",
    "openai>=1.0",
    "pinecone>=3.0",
    "edgartools[ai]>=5.0",
    "mcp>=1.0",
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
    "python-dotenv>=1.0",
    "duckdb>=0.10",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
markers = [
    "integration: marks tests that hit live APIs (deselect with -m 'not integration')",
]
